# pzmcp

./: # Project Zomboid MCP Server Development Plan.md  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_DEBUG_STEPS.md  CLAUDE_DESKTOP_INTEGRATION.md  DIAGNOSTIC_STEPS.md  FINAL_SETUP.md  GUI_DEVELOPMENT_PLAN.md  MODERN_FEATURES.md  PRD.md  PROTOCOL_FIX.md  QUICK_FIX.md  README.md  README_CLAUDE_INTEGRATION.md  READY_FOR_CLAUDE.md  ROADMAP.md  SETUP_WINDOWS.md  SUCCESS_VERIFICATION.md  TROUBLESHOOT_UPGRADE.md  UPGRADE_COMPLETE.md  WINDOWS_SETUP.md  WSL_INTEGRATION_COMPLETE.md  claude_desktop_config.json  claude_desktop_config_debug.json  claude_desktop_config_modern.json  data_models.py  data_repository.py  data_transformer.py  debug_server.py  diagnose_windows.py  extract_recipes.py  install_dependencies.py  install_for_windows.bat  install_windows_deps.py  mcp_data.db  mcp_server_cli.py  pyproject.toml  pyproject_poetry.toml  pz_combined.md  (+17 more)
.claude/: settings.local.json
mcp_server/: README.md  main.py  mcp_server.py  modern_server.py  pyproject.toml
mcp_server/core/: __init__.py  data_extractor.py  database.py  enhanced_data_extractor.py  mod_checker.py  models.py  script_generator.py  search_service.py
mcp_server/data/vanilla_scripts/: items.txt  recipes.txt  vehicles.txt
mcp_server/parsers/: __init__.py  base_parser.py  item_parser.py  recipe_parser.py  vehicle_parser.py
mcp_server/templates/: basic_item.json  basic_recipe.json  simple_weapon.json
mcp_server/tests/: test_item_parser.py  test_recipe_parser.py  test_script_generator.py  test_search_service.py  test_vehicle_parser.py
media/scripts/: energies.txt  evolvedrecipes.txt  farming.txt  fixing.txt  fluids.txt  fluids_Alcoholic.txt  fluids_Beverages.txt  items.txt  items_literature.txt  items_radio.txt  items_weapons.txt  models_animals.txt  models_characters.txt  models_clothes.txt  models_fish.txt  models_food.txt  models_isoobject.txt  models_items.txt  models_items_animals.txt  models_runtime.txt  models_weapons.txt  moveables.txt  multistagebuild.txt  newBags.txt  newMoveables.txt  newitems.txt  timedactions.txt  uniquerecipes.txt
media/scripts/TEMPORARY_TESTING_new_items/: TEMPORARY_items_fishing.txt  TEMPORARY_items_fluidcontainers.txt  TESTING_CapGuns.txt  TESTING_Misc.txt  (+1 more)
reference/: How to make a mod.md
tests/: test_modern_server.py
(+884 files in other folders)
